--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ authors = [
 requires-python = ">=3.13"
 dependencies = [
     "dotenv>=0.9.9",
+    "python-decouple>=3.8",
     "sqlmodel>=0.0.27",
 ]
 
